# rugrep

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md
src/: lib.rs  main.rs
tests/: cli.rs
